# zephyr-learning-prj

./: .gitignore  CMakeLists.txt  west.yml  workspace_setup.sh
app/: CMakeLists.txt  VERSION  prj.conf
app/src/: main.c
boards/my_vendor/myboard/: Kconfig.myboard  board.cmake  board.yml  myboard.dts
boards/st/myboard/: board.yml  myboard.dts
src/: main.c
